Revert "improve about page"
This reverts commit c01ae296d1d2d042787b479429840df7abebae3a.

	modified:   docker/development-easy-arm/docker-compose.yml

--- a/docker/development-easy-arm/docker-compose.yml
+++ b/docker/development-easy-arm/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     - ../library/sql-ssl-certs-keys/easy/server-key.pem:/etc/ssl/server-key.pem:ro
     - databasevolume:/var/lib/mysql
     environment:
-      MYSQL_ROOT_PASSWORD:  M@ar1@_tom@ca##f3333
+      MYSQL_ROOT_PASSWORD: root
   openemr:
     restart: always
     image: openemr/openemr:flex
@@ -35,7 +35,7 @@ services:
       TERM: xterm-256color
       COLORTERM: truecolor
       MYSQL_HOST: mysql
-      MYSQL_ROOT_PASS: M@ar1@_tom@ca##f3333
+      MYSQL_ROOT_PASS: root
       MYSQL_USER: openemr
       MYSQL_PASS: openemr
       OE_USER: admin
